arrows for product, indent untranslated
git-svn-id: file:///srv/svn/publican/trunk@1341 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/web/interactive.css
+++ b/publican/web/interactive.css
@@ -203,6 +203,8 @@ object.toc, iframe.toc {
 .tocnav div.product {
 	line-height: 28px;
 	border-bottom: 1px solid #eee;
+	background-image: url(images/arrows.png);
+	background-repeat: no-repeat;
 }
 
 .tocnav div.product:hover span.product {
@@ -246,6 +248,11 @@ object.toc, iframe.toc {
 	color: white !important;
 	background-color: #666;
 	background-position: 8px -170px !important;
+}
+
+
+.version div.untranslated {
+	margin-left: 2em;
 }
 
 /*books*/
