translated stats page
git-svn-id: file:///srv/svn/publican/trunk@1356 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/templates/stats.tmpl
+++ b/publican/templates/stats.tmpl
@@ -3,11 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="interactive.css" type="text/css" />
+	<link rel="stylesheet" href="../interactive.css" type="text/css" />
 	<title>[% Site_Statistics %]</title>
 </head>
 <body  class="toc_embeded">
-<div id="tocdiv" class="toc"><iframe id="tocframe" class="toc" src="./en-US/toc.html">[% iframe %]</iframe></div>
+<div id="tocdiv" class="toc"><iframe id="tocframe" class="toc" src="toc.html">[% iframe %]</iframe></div>
 <div>
 <h1 class="producttitle">[% Site_Statistics %]</h1>
 <p>
