fix statis toc path
git-svn-id: file:///srv/svn/publican/trunk@1359 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/templates/static_toc.tmpl
+++ b/publican/templates/static_toc.tmpl
@@ -32,7 +32,7 @@
 							<span id="[% book %]" class="book">[% book_clean %]</span> 
 							<div class="types">
 							[% FOREACH types %]
-								<a class="type" href="[% prep %][% langloc %]/[% product_path %]/[% version %]/[% type %]/[% book %]/[% ext %]">[% type %]</a>
+								<a class="type" href="[% prep %][% langloc %]/[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]">[% type %]</a>
 			        			[% END %]
 							</div>
 						</div>
