fix displaced images in RTL languages
git-svn-id: file:///srv/svn/publican/trunk@1391 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/ar-SA/css/lang.css
+++ b/publican/datadir/Common_Content/common/ar-SA/css/lang.css
@@ -140,7 +140,7 @@ div.note h2, div.note p, div.note div.para, div.warning h2, div.warning p, div.w
 	border:none;
 	float:right;
 	margin:0em;
-	margin-top:.7em;
+	margin-top:0em;
 }
 
 #title a.left {
