--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -82,6 +82,10 @@ p, div.para, div.formalpara {
 }
 
 /*Links*/
+a {
+	outline: none;
+}
+
 a:link {
 	text-decoration:none;
 	border-bottom: 1px dotted ;
