more work on product/version splash pages, including getting menu poping working
git-svn-id: file:///srv/svn/publican/trunk@1462 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -38,9 +38,9 @@
 				<div id='[% product %].[% version %].books' class="books">
 		    [%- END -%]
 				[% FOREACH books %]
-					<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="toggle(event, '[% product %].[% version %].[% book %].types');">
+					<div id='[% product %].[% version %].[% book %]' class="book collapsed">
 						<a class="type" href="[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
-						<div id='[% product %].[% version %].[% book %].types' class="types hidden" onclick="work=0;">
+						<div id='[% product %].[% version %].[% book %].types' class="types" onclick="work=0;">
 						[% FOREACH types %]
 							<a class="type" href="[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='./[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]>[% type %]</a>
 			        		[% END %]
