--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -19,60 +19,62 @@
 		</div>
 		<select id="langselect" class="langselect"  onchange="loadToc();">
 			<option disabled="disabled" value="">[% Language %]</option>
-        	[% FOREACH langs %]
+        	[%- FOREACH langs %]
 			<option [% selected %] value="[% lang %]">[% lang_name %]</option>
-	        [% END %]
+	        [%- END %]
 		</select>
 	</div>
-	<div class="hidden" id="nocookie">[% nocookie %]</div>
-	[% FOREACH products %]
+	<div class="hidden" id="nocookie">
+		[% nocookie %]
+	</div>
+	[%- FOREACH products %]
 	<div class="product collapsed" onclick="toggle(event, '[% product %]');work=1;">
 		<span class="product">[% product_clean %]</span>
 		<div id='[% product %]' class="versions hidden">
-		[% FOREACH versions %]
-		    [%- IF version_label != 'UNUSED' -%]
+		[%- FOREACH versions %]
 			<div id='[% product %].[% version %]' class="version collapsed" onclick="toggle(event, '[% product %].[% version %].books');">
+		    [%- IF version_label != 'UNUSED' %]
 				<span class="version">[% version_label %]</span>
 				<div id='[% product %].[% version %].books' class="books hidden">
 		    [%- ELSE -%]
 				<div id='[% product %].[% version %].books' class="books">
-		    [%- END -%]
-				[% FOREACH books %]
+		    [%- END %]
+				[%- FOREACH books %]
 					<div id='[% product %].[% version %].[% book %]' class="book collapsed">
 						<a class="type" href="[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
 						<div id='[% product %].[% version %].[% book %].types' class="types" onclick="work=0;">
-						[% FOREACH types %]
+						[%- FOREACH types %]
 							<a class="type" href="[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='./[% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]>[% type %]</a>
-			        		[% END %]
+			        		[%- END %]
 						</div>
 					</div>
-	        		[% END %]
+	        		[%- END %]
                                 [%- IF untrans_books %]
 					<div id='[% product %].[% version %]' class="version collapsed untranslated" onclick="toggle(event, '[% product %].[% version %].untrans_books');">
 						<span class="version">[% Untranslated %]</span>
 						<div id='[% product %].[% version %].untrans_books' class="books hidden">
-						[% FOREACH untrans_books %]
+						[%- FOREACH untrans_books %]
 							<div id='[% product %].[% version %].[% book %]' class="book collapsed" onclick="toggle(event, '[% product %].[% version %].[% book %].types');">
 								<a class="type" href="../[% untrans_lang %]/[% product %]/[% version %]/html/[% book %]/index.html" onclick="window.top.location='../[% untrans_lang %]/[% product %]/[% version %]/html/[% book %]/index.html'"><span class="book">[% book_clean %]</span></a> 
 								<div id='[% product %].[% version %].[% book %].types' class="types hidden" onclick="work=0;">
-								[% FOREACH types %]
+								[%- FOREACH types %]
 									<a class="type" href="../[% untrans_lang %]/[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]" [% IF onclick %]onclick="window.top.location='../[% untrans_lang %]/[% prep %][% product %]/[% version %]/[% type %]/[% book %]/[% ext %]';return false;"[% END %]>[% type %]</a>
-			        				[% END %]
+			        				[%- END %]
 								</div>
 							</div>
-		        			[% END %]
+		        			[%- END %]
 						</div>
 					</div>
-	        		[% END %]
+	        		[%- END %]
 				</div>
-		    [%- IF version != 'UNUSED' -%]
 			</div>					
-		    [%- END -%]
-       		[% END %]
+       		[%- END %]
 		</div>					
 	</div>					
-       	[% END %]
-	<div class="nocookie" id="nojs">[% nojs %]</div>
+       	[%- END %]
+	<div class="nocookie" id="nojs">
+		[% nojs %]
+	</div>
 	<div class="bottom_links">
 		<a href="../toc.html" onclick="window.top.location='../toc.html'" >[% Site_Map %]</a>
 		<a href="./Site_Statistics.html" onclick="window.top.location='./Site_Statistics.html'" >[% Site_Statistics %]</a>
