fix opds layout, start changes to get subtitle and abstract in to the DB
git-svn-id: file:///srv/svn/publican/trunk@1518 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/templates/index.tmpl
+++ b/publican/templates/index.tmpl
@@ -3,11 +3,11 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>[%- Documentation -%]</title>
+	<title>[%- title -%]</title>
 	<link rel="stylesheet" href="interactive.css" type="text/css" />
 </head>
 <body class="nojs">
-<h1>[%- Documentation -%]</h1>
+<h1>[%- title -%]</h1>
 <script type="text/javascript">
 	var lang = "";
 	if(window.navigator.userLanguage)
