--- a/publican/templates/opds-prods.tmpl
+++ b/publican/templates/opds-prods.tmpl
@@ -4,9 +4,9 @@
       xmlns:opds="http://opds-spec.org/2010/catalog">
   <link rel="self"  href="[% self %]" type="application/atom+xml;type=feed;profile=opds-catalog"/>
   <link rel="http://opds-spec.org/crawlable" type="application/atom+xml" href="http://bookserver.archive.org/catalog/crawlable" title="Crawlable feed"/>
-  <!--id>[% site_id %]</id-->
-  <!--title>[% site_title %]</title-->
-  <updated>[% site_update_date %]</updated>
+  <id>[% id %]</id>
+  <title>[% title %]</title>
+  <updated>[% update_date %]</updated>
   <!--author>
     <name>[% site_auth_name %]</name>
     <uri>[% site_auth_uri %]</uri>
@@ -18,8 +18,12 @@
     <id>[% id %]</id>
     <updated>[% update_date %]</updated>
     <dc:language>[% lang %]</dc:language>
-    <content type="text">product blurb ...</content>
-    <link type="application/atom+xml;type=feed;profile=opds-catalog" href="[% url %]"/>
+    <content type="text">[% content %]</content>
+    <link type="application/atom+xml" href="[% url %]"/>
+    [%- IF img %]
+    <link type="image/png" rel="http://opds-spec.org/image/thumbnail" href="[% img %]"/>
+    <link type="image/png" rel="http://opds-spec.org/cover" href="[% img %]"/>
+    [%- END %]
  </entry>
 [%- END %]
 </feed>
