limit edition styling to title pages
git-svn-id: file:///srv/svn/publican/trunk@1534 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -1382,7 +1382,7 @@ pre {
 	font-style: italic;
 }
 
-.edition {
+.titlepage .edition {
 	color: #336699;
 	background-color: transparent;
 	margin-top: 1em;
