- Scroll to current entry in navigation menu. - Highlight current book in navigation menu.
git-svn-id: file:///srv/svn/publican/trunk@1552 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/web/interactive.css
+++ b/publican/web/interactive.css
@@ -471,3 +471,15 @@ h1.producttitle {
 	padding: 1em;
 }
 
+.books .current div, .books .current span {
+	background-color: #ccddee !important;
+}
+
+.books .current a:link {
+	color: black !important;
+}
+
+.books .current a:visited {
+	color: black !important;
+}
+
