Move HTML image limit from XSL to CSS, increase to 55em.
git-svn-id: file:///srv/svn/publican/trunk@1583 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -618,7 +618,8 @@ li p, li div.para {
 /*images*/
 img {
 	display:block;
-	margin:2em 0;
+	margin: 2em 0;
+	max-width: 55em;
 }
 
 .inlinemediaobject, .inlinemediaobject img {
