Another CSS fix for community styles
git-svn-id: file:///srv/svn/publican/trunk@1591 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss-community-richfaces/en-US/css/overrides.css
+++ b/publican-jboss-community-richfaces/en-US/css/overrides.css
@@ -321,6 +321,41 @@ div.warning h2, div.note h2, div.important h2, div.tip h2, div.caution h2 {
 	background-image: none;
 }
 
+div.admonition_header {
+	clear: both;
+	margin: 0em;
+	padding: 0em;
+	margin-top: 0em;
+	padding-left: 0px;
+	line-height: 1.0em;
+	font-size: 1.0em;
+}
+
+div.warning div.admonition_header {
+	background: none;
+	background-color: transparent;
+}
+
+div.note div.admonition_header {
+	background: none;
+	background-color: transparent;
+}
+
+div.important div.admonition_header {
+	background: none;
+	background-color: transparent;
+}
+
+div.tip div.admonition_header {
+	background: none;
+	background-color: transparent;
+}
+
+div.caution div.admonition_header {
+	background: none;
+	background-color: transparent;
+}
+
 div.warning p, div.warning div.para,
 div.note p, div.note div.para,
 div.important p, div.important div.para,
