--- a/publican/datadir/Common_Content/common/en-US/css/common.css
+++ b/publican/datadir/Common_Content/common/en-US/css/common.css
@@ -29,6 +29,26 @@ object.toc, iframe.toc {
 	border-right:1px solid #999;
 }
 
+/* Hide web menu */
+
+body.notoc {
+	margin-left: 3em;
+}
+
+iframe.notoc {
+	border-style:none;
+	border: none;
+	padding:0em;
+	position:fixed;
+	width: 2em;
+	top:103px;
+	left:0;
+	overflow:hide;
+	margin: 0em;
+	margin-left: -3px;
+}
+/* End hide web menu */
+
 /* desktop styles */
 body.desktop {
 	margin-left: 26em;
