--- a/publican/web/interactive.css
+++ b/publican/web/interactive.css
@@ -16,14 +16,15 @@ object.toc, iframe.toc{
 	height:100%;
 }
 
-.reset { float: right; text-align: right; padding-top: 0em; }
+a{outline:none}
+
+.reset { float: right; text-align: right; padding-top: 0em; margin-right: 0em;}
 .reset a { text-decoration: none; }
 .reset a:link, .reset a:visited {
 	border-style: none;
 	color: black;
 }
 .reset a:hover, .reset a:focus, .reset a:active { color: #777; }
-
 select,  option { height: 1.5em; line-height: 1.5em; }
 
 div.nocookie {
@@ -76,7 +77,7 @@ form {
 }
 
 div.search {
-	padding: 12px 22px;
+	padding: 10px 22px;
 	background-color:#eee;
 }
 
@@ -144,17 +145,59 @@ body.tocnav {
 	position: relative;
 }
 
-body.toc_embeded {
-	/*for web hosting system only*/
-	margin-left: 300px;
+/* Hide menu */
+body.notocnav {
+	width: 4em;
+	overflow: hide;
+	margin: 0em;
+	padding: 0em;
 }
+
+.closemenu {
+	float: right;
+	padding: 0em;
+	margin: 0em;
+	margin-top: 103px;
+}
+
+.closemenu a {
+	padding: 0em;
+	margin:0em;
+}
+
+.closemenu img {
+	border: none;
+	padding: 0em;
+	margin: 0em;
+}
+
+.openmenu {
+	float: left;
+	padding: 0em;
+	margin: 0em;
+	margin-top: 0px;
+	margin-left: 2px;
+}
+
+.openmenu a {
+	padding: 0em;
+	margin: 0em;
+}
+
+.openmenu img {
+	border: none;
+	padding: 0em;
+	margin: 0em;
+}
+
+/* END hide menu */
 
 object.toc, iframe.toc {
 	/*for web hosting system only*/
 	border-style:none;
 	position:fixed;
 	width:290px;
-	height:99.99%;
+	height:100%;
 	top:0;
 	left:0;
 	z-index: 100;
@@ -162,11 +205,11 @@ object.toc, iframe.toc {
 	border-right:1px solid 
 }
 
-.tocnav h1 span {
+.tocnav .outer h1 span {
 	display: none
 }
 
-.tocnav h1 a {
+.tocnav .outer h1 a {
 	display: block;
 	width: 100%;
 	height: 100px;
@@ -175,14 +218,14 @@ object.toc, iframe.toc {
 	background-color: #7b0000;
 }
 
-.tocnav h1 {
+.tocnav .outer h1 {
 	margin:0em;
 	padding:0em;
 }
 
-/*.tocnav select{border: 1px solid #777;margin:20px 0px 20px 20px; width:120px;cursor:pointer;}
+/*.tocnav .outer select{border: 1px solid #777;margin:20px 0px 20px 20px; width:120px;cursor:pointer;}
 */
-.tocnav div span {
+.tocnav .outer div span {
 	display: block;
 }
 
@@ -191,7 +234,7 @@ object.toc, iframe.toc {
 	display:block;
 } /*make submenu expand*/
 
-.tocnav div:hover {
+.tocnav .outer div:hover {
 	cursor: default;
 } /*make link cursor*/
 
@@ -200,18 +243,18 @@ object.toc, iframe.toc {
 }
 
 /*product*/
-.tocnav div.product {
+.tocnav .outer div.product {
 	border-bottom: 1px solid #eee;
 	background-image: url(images/arrows.png);
 	background-repeat: no-repeat;
 	padding-top: 3px;
 }
 
-.tocnav div.product:hover span.product {
+.tocnav .outer div.product:hover span.product {
 	color: black;
 }
 
-.tocnav span.product {
+.tocnav .outer span.product {
 	padding: 0px;
 	padding-left: 22px;
 	padding-right: 20px;
@@ -251,15 +294,15 @@ object.toc, iframe.toc {
 }
 
 
-.tocnav a.product,
-.tocnav a.version {
+.tocnav .outer a.product,
+.tocnav .outer a.version {
 	right: 0px;
 	position: absolute;
 	text-decoration: none;
 }
 
-.tocnav img.product,
-.tocnav img.version {
+.tocnav .outer img.product,
+.tocnav .outer img.version {
 	margin: 0em;
 	padding: 0em;
 	margin-top: 0.15em;
@@ -271,7 +314,7 @@ object.toc, iframe.toc {
 }
 
 /*books*/
-.tocnav div.book span.book {
+.tocnav .outer div.book span.book {
 	padding-left: 36px;
 	background-color: white;
 	color: #06c;
@@ -281,29 +324,29 @@ object.toc, iframe.toc {
 	padding-bottom: 0.4em;
 }
 
-.tocnav div.book span.book:hover {
+.tocnav .outer div.book span.book:hover {
 	color: black;
 	text-decoration: underline;
 }
 
 /*versions*/
-.tocnav div.version {
+.tocnav .outer div.version {
 	background-color: white;
 	line-height: 20px;
 }
 
-.tocnav span.version {
+.tocnav .outer span.version {
 	font-weight: bold;
 	color: #999;
 	cursor: pointer;
 	padding-right: 20px;
 }
 
-.tocnav span.version:hover {
+.tocnav .outer span.version:hover {
 	color: #000;
 }
 
-.tocnav span.version {
+.tocnav .outer span.version {
 	padding-left: 36px;
 	background-image: none;
 }
@@ -330,13 +373,13 @@ object.toc, iframe.toc {
 
 	
 /*types*/
-.tocnav .types {
+.tocnav .outer .types {
 	background-color: white;
 	text-transform: uppercase;
 	font-size: 0.8em;
 }
 
-.tocnav div.types {
+.tocnav .outer div.types {
 	background: white;
 	background-image: none;
 	padding: 0em;
@@ -359,7 +402,7 @@ object.toc, iframe.toc {
 	color: #000;
 }
 
-.tocnav div.types a {
+.tocnav .outer div.types a {
 	padding-top: 0em;
 	padding-left: 4px;
 }
