make popup texts translatable
git-svn-id: file:///srv/svn/publican/trunk@1622 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -9,10 +9,10 @@
 </head>
 <body class="tocnav" onload="hideNoJS();getCookie();checkCookie();checkMenu();">
 <div id="closemenu" class="closemenu visible">
-	<a href="#" title="Hide Menu" onclick="hideMenu();" ><img src="../images/close.png"/></a>
+	<a href="#" title="[% Hide_Menu %]" onclick="hideMenu();" ><img src="../images/close.png"/></a>
 </div>
 <div id="openmenu" class="openmenu hidden">
-	<a href="#" title="Show Menu" onclick="showMenu();"><img src="../images/open.png"/></a>
+	<a href="#" title="[% Show_Menu %]" onclick="showMenu();"><img src="../images/open.png"/></a>
 </div>
 <div id="outer" class="outer visible">
 <h1>
