--- a/publican/templates/toc.tmpl
+++ b/publican/templates/toc.tmpl
@@ -41,7 +41,7 @@
 		[%- FOREACH versions %]
 			<div id='[% product %].[% version %]' class="version collapsed" onclick="toggle(event, '[% product %].[% version %].books');">
 		    [%- IF version_label != 'UNUSED' %]
-				<span class="version">[% version_label %][%- IF ver_icon -%]<a class="version" title="[% ver_link_title %]" href="[% product %]/[% version %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/index.html'"><img class="version" src="../../images/page.png" /></a>[%- END %]</span>
+				<span class="version">[% version_label %][%- IF ver_icon -%]<a class="version" title="[% ver_link_title %]" href="[% product %]/[% version %]/index.html" onclick="window.top.location='./[% product %]/[% version %]/index.html'"><img class="version" src="../images/page.png" /></a>[%- END %]</span>
 				<div id='[% product %].[% version %].books' class="books hidden">
 		    [%- ELSE -%]
 				<div id='[% product %].[% version %].books' class="books">
